# iatp1-gol

./: .gitmodules  CMakeLists.txt
includes/: loader.hpp  rng.hpp
resources/: gol.comp  gol.frag  gol.vert  loader.comp
sources/: loader.cpp  main.cpp
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
